# cppimagefilterbase

./: .gitignore  CMakeLists.txt  config.txt  filter.cpp  filter.h  image_data.h  main.cpp  png_toolkit.cpp  png_toolkit.h
filter/: filter.cpp  filter.h
png_toolkit/: png_toolkit.cpp  png_toolkit.h
